tests/paczka1/fuzzy1/32106060.err
Error in line 6: jajdoq A630 45,6
Error in line 10: NpHh S435 85,6
Error in line 13: 6CZ A630 43,0
